# onepass2numbers

./: .gitignore  LICENSE  README.md  pyproject.toml
src/onepass2numbers/: __init__.py  _onepass2numbers.py
