[tool.poetry]
authors = ["Jon Connell <python@figsandfudge.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "A converter to Numbers spreadsheets for 1Password 1PUX files"
documentation = "https://github.com/masaccio/onepass2numbers/blob/main/README.md"
license = "MIT"
name = "onepass2numbers"
packages = [{include = "onepass2numbers", from = "src"}]
readme = "README.md"
repository = "https://github.com/masaccio/onepass2numbers"
version = "1.0.0"

[tool.poetry.dependencies]
python = "^3.10"
numbers-parser = ">=4.13"

[tool.poetry.group.dev.dependencies]
black = {version = "*", allow-prereleases = true}
pytest-console-scripts = "*"
pytest-cov = "*"
ruff = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
onepass2numbers = "onepass2numbers._onepass2numbers:main"

[tool.coverage.run]
branch = true

[tool.coverage.html]
directory = "coverage_html_report"

[tool.pytest.ini_options]
addopts = "--cov=src/onepass2numbers --cov-report=term-missing"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py310, py311, py312
[testenv]
allowlist_externals = poetry
commands_pre = poetry install --no-root --sync
commands = poetry run -vvv pytest --import-mode importlib
"""

# linter settings
[tool.isort]
profile = "black"

[tool.ruff]
fix = true
ignore = ["T201", "FBT001", "FBT003", "PTH123"]
line-length = 100
select = ["ALL"]
target-version = "py310"

# [tool.ruff.flake8-tidy-imports]
# ban-relative-imports = "all"

# [tool.ruff.per-file-ignores]
# "tests/**" = ["PTH123", "PLR2004", "S101", "D100", "D103", "ANN201", "ANN001"]